--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ h1,h2,h3,h4,h5, button, .amiibo-name{
 }
 
 #ribbon{
-    background-color: rgb(96, 99, 99);
+    background-color: rgb(10, 10, 10);
     background-image: repeating-linear-gradient(45deg, transparent, transparent 25px, rgba(0, 0, 0, 0.5) 25px, rgba(11, 12, 12, 0.5) 40px);
 }
 #ribbon::after{
@@ -35,13 +35,38 @@ h1,h2,h3,h4,h5, button, .amiibo-name{
     border-bottom-right-radius: 50%;
 }
 #birthday{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(5, 3, 3);
     position: relative;
     margin-top: -20px;
     z-index: 10;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(7, 6, 6, 0.5);
+}
+.myButton {
+	box-shadow:inset 0px 1px 7px -29px #3e7327;
+	background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+	background-color:#77b55a;
+	border-radius:11px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:28px;
+	font-weight:bold;
+	padding:14px 76px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+	background-color:#72b352;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
 
+    
 
 #birthday img{
     position: relative;
@@ -114,12 +139,12 @@ h1,h2,h3,h4,h5, button, .amiibo-name{
 
 #play{   
     background: url(../img/bg-04.png);
-    background-color: rgb(255, 255, 219);
+    background-color: rgb(32, 32, 32);
     background-size: 40px 40px;
 }
 
 #footer{
     background: url(../img/bg-04.png);
-    background-color: rgb(224, 144, 24);
+    background-color: rgb(0, 0, 0);
     background-size: 50px 50px;
 }
