--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ h1,h2,h3,h4,h5, button, .amiibo-name{
 	background-color:#72b352;
 }
 .myButton:active {
-	position:absolute;
+	position:relative;
 	top:1px;
 }
 
